Prevent search table header controls from overflowing onto new line (#987)

--- a/src/subapps/search/containers/SearchContainer.less
+++ b/src/subapps/search/containers/SearchContainer.less
@@ -14,6 +14,11 @@
 
   &__paginator {
     margin-left: auto !important;
+    flex-shrink: 0;
+  }
+
+  &__options {
+    flex-shrink: 0;
   }
 }
 
